--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <!-- Start External Link -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Rubik:400,700" rel="stylesheet">
+  <link href="%PUBLIC_URL%/css/main.css" rel="stylesheet">
+  <!-- End External Link -->
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <title>Near By You</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+
+
+  <!-- Start External Script Link -->
+  <script src="%PUBLIC_URL%/js/jquery-3.3.1.min.js"></script>
+  <script
+    src="%PUBLIC_URL%/js/jquery-migrate-3.0.1.min.js%2bjquery-ui.js%2bpopper.min.js.pagespeed.jc.-sXDj7oHrw.js"></script>
+  <script>eval(mod_pagespeed_Ygq2SghKd8);</script>
+  <script>eval(mod_pagespeed_c13NyaR3N7);</script>
+  <script>eval(mod_pagespeed_Vo$uVBwtxw);</script>
+  <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
+  <script
+    src="%PUBLIC_URL%/js/owl.carousel.min.js%2bjquery.stellar.min.js%2bjquery.countdown.min.js%2bjquery.magnific-popup.min.js.pagespeed.jc.7hVpLoPoHA.js"></script>
+  <script>eval(mod_pagespeed_uYQKcsFvgR);</script>
+  <script>eval(mod_pagespeed_cLo0KN6O1N);</script>
+  <script>eval(mod_pagespeed_1THUI3FMqE);</script>
+  <script>eval(mod_pagespeed_8UhlwrZKrm);</script>
+  <script
+    src="%PUBLIC_URL%/js/bootstrap-datepicker.min.js%2baos.js%2brangeslider.min.js%2btyped.js.pagespeed.jc.FvGWj03dIW.js"></script>
+  <script>eval(mod_pagespeed_feZVy7FBIF);</script>
+  <script>eval(mod_pagespeed_hdqrVszHY3);</script>
+  <script>eval(mod_pagespeed_lsFeh_oGPK);</script>
+  <script>eval(mod_pagespeed_2Lm37pujt7);</script>
+  <script>
+    var typed = new Typed('.typed-words', {
+      strings: ["Attractions", " Events", " Hotels", " Restaurants"],
+      typeSpeed: 80,
+      backSpeed: 80,
+      backDelay: 4000,
+      startDelay: 1000,
+      loop: true,
+      showCursor: true
+    });
+  </script>
+  <script src="%PUBLIC_URL%/js/main.js"></script>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-23581568-13');
+  </script>
+  <script defer src="%PUBLIC_URL%/../../../static.cloudflareinsights.com/beacon.min.js"
+    data-cf-beacon='{"rayId":"6955abc14ddede21","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2021.8.1","si":10}'></script>
+
+  <!-- End External Script Link -->
+
+</body>
+
 </html>
