most of the api calling

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+  <!-- <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <meta name="google-signin-client_id"
+    content="205003773882-72r9lpj0jopaptc42uaf0h7nh78g43pq.apps.googleusercontent.com">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+
   <!-- Start External Link -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Rubik:400,700" rel="stylesheet">
